[developing]: started working with notes web-handlers
